# subsidy

./: .gitignore  gen_yokohama.py  index.html  pyproject.toml  requirements.txt  run_jgrants.bat  run_scraper.bat
.github/workflows/: scrape-and-publish.yml
_astro/: _slug_.Bi39_pcG.css  _slug_.CQf339dr.css  _slug_.ClWM_te9.css  _slug_.Dhaf_KQD.css  _slug_.NeBhrQT_.css
data/raw/2026-04-26/: osaka-fukushi-page-0000086801-html.json  osaka-fukushi-page-0000336407-html.json  osaka-fukushi-page-0000398190-html.json  osaka-fukushi-page-0000431968-html.json  osaka-fukushi-page-0000530619-html.json  osaka-fukushi-page-0000593186-html.json  osaka-fukushi-page-0000622098-html.json  osaka-fukushi-page-0000639409-html.json  osaka-fukushi-page-0000652278-html.json  osaka-fukushi-page-0000668345-html.json  osaka-fukushi-page-0000677816-html.json  osaka-kikikanrishitsu-page-0000397769-html.json  osaka-kodomo-page-0000138394-html.json  (+14 more)
data/run_logs/: 2026-04-28.jsonl  2026-04-29.jsonl
data/state/: seen_urls.json
processor/: claude_client.py  schema.py  structurer.py
processor/prompts/: healer_prompt.txt  system_prompt.txt
scraper/: base_scraper.py  enrich_jgrants.py  gen_jgrants_articles.py  generic_scraper.py  registry.py  run_jgrants.py  run_scraper.py  self_healer.py
scraper/utils/: html_parser.py  http_client.py  pdf_extractor.py
scripts/: auto_run.bat  register_task.bat  run_pipeline.py  scrape_only.py  validate_output.py
site/: astro.config.mjs  package-lock.json  package.json
storage/: markdown_writer.py  run_log.py  state_manager.py
(+2223 files in other folders)
